add log of maven

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 	<body>
+	<a href= "log.txt">logs for mvn build </a>
 	<a href="diff/index.html">diff reports</a>
 	<br>
 	<a href="wercker/index.html">wercker reports</a>
