add index as well

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 	<head>
 	<body>
+	<a href= "LittleOdin.jpg">Little Odin</a>
+	<br>
 	<a href= "log.txt">logs for mvn build </a>
+	<br>
 	<a href="diff/index.html">diff reports</a>
 	<br>
 	<a href="wercker/index.html">wercker reports</a>
