--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 	<body>
-	<a href= "LittleOdin.jpg">Little Odin</a>
+	<a href= "LiittleOdin.jpg">Little Odin</a>
 	<br>
 	<a href= "log.txt">logs for mvn build </a>
 	<br>
