--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 	<body>
 	<a href= "LiittleOdin.jpg">Little Odin</a>
+	<img src = "LiitleOdin.jpg">
 	<br>
 	<a href= "log.txt">logs for mvn build </a>
 	<br>
