optimizes load time by reducing image size

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
 	<body>
-	<a href= "LiittleOdin.jpg">Little Odin</a>
-	<img src = "LiitleOdin.jpg">
+	<a href= "LiitleOdin.jpg">Little Odin</a>
+	<img src = "LiitleOdin.jpg" style="max-height: 100%; max-width:100%"/>
 	<br>
 	<a href= "log.txt">logs for mvn build </a>
 	<br>
