Add convnet implementation

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
 	<body>
-	<a href= "LiitleOdin.jpg">Little Odin</a>
-	<img src = "LiitleOdin.jpg" style="max-height: 100%; max-width:100%"/>
+	<a href= "detect1.py">Convnet model for apple logo detection</a>
+	<!--img src = "LiitleOdin.jpg" style="max-height: 100%; max-width:100%"/>
 	<br>
 	<a href= "log.txt">logs for mvn build </a>
 	<br>
@@ -10,6 +10,7 @@
 	<br>
 	<a href="wercker/index.html">wercker reports</a>
 	<br>
+	-->
 	
 	<body>
 	</head>
