A simple game in Javascript

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 	<body>
-	<a href= "detect1.py">Convnet model for apple logo detection</a>
+	<a href="./binary_search.html">A very simple game</a>
 	<!--img src = "LiitleOdin.jpg" style="max-height: 100%; max-width:100%"/>
 	<br>
 	<a href= "log.txt">logs for mvn build </a>
