Update experience section to reflect Senior Software Engineer role, backend Java, database, and Snowflake expertise

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 											</h1>
 											<p>A Software Engineer based in Bengaluru</p>
 										</header>
-										<p>I have two years of professional experience in web development with Java. 
-I am a self-motivated and curious person which gets reflected in my work. I bring with me excellent problem solving, communication and interpersonal skills, experience in Object Oriented Design,  knowledge of Distributed Systems, and a great Team player. Being a tech savvy person and am updated with latest technologies in the tech universe and curious to learn newer technologies.
-</p>
+										<p>Senior Software Engineer with extensive backend development experience in Java, specializing in designing and implementing scalable, high-performance systems. Proficient in working with multiple databases (both SQL and NoSQL), ensuring robust data management and optimized query performance. Currently employed at a leading finance company, where I leverage Snowflake for advanced data analysis, ETL processes, and business intelligence solutions. Adept at collaborating with cross-functional teams, driving technical excellence, and delivering solutions that support critical business operations.</p>
 										<ul class="actions">
 											<li><a href="assets/pdf/suraj-resume.pdf" class="button big">Resume</a></li>
 										</ul>
